examples/httpbin/tls/httpbin-tls-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: httpbin-local
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: httpbin-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-credential
    hosts:
    - "local.httpbin.org"
